# flappybird_qlearning

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: eg.hpp
src/flappybird/: game.cpp
src/model/: ql.hpp
